--- a/index.html
+++ b/index.html
@@ -24,44 +24,47 @@
         <section class="main-section">
             <img class="main-logo" src="./assets/alchemy-logo.png" />
             <h2>
-                Welcome to Alchemy Bootstrap!
+                Calculator!
             </h2>
+            <section id="counterSection">
+                <h3 class="first">You have used addition <span id="addMany">0</span></h3>
+                <h3 class="second">You have used Subtraction <span id="subMany">0</span></h3>
+                <h3 class="third">You have used multiplied <span id="multiMany">0</span></h3>
+                <h3 class="fourth">You have used divided <span id="divMany">0</span></h3>
+            </section>
 
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur
-                voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos
-                praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores
-                provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente
-                excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil
-                inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi
-                reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit
-                possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis
-                ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa
-                praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis
-                exercitationem?
-            </p>
-            <hr />
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur
-                voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos
-                praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores
-                provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente
-                excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil
-                inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi
-                reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit
-                possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis
-                ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa
-                praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis
-                exercitationem?
-            </p>
+        <div class="addition-section">
+            <h2>Addition</h2>
+            <input id='inputADD1' type="text">
+            <p>+</p>
+            <input id='inputADD2' type="text">
+            <button id="addButton">=</button>
+            <p id="addAnswer">Answer</p>
+        </div>
+        <div class="subtraction-section">
+            <h2>Subtraction</h2>
+            <input id='inputSUB1' type="text">
+            <p>-</p>
+            <input id='inputSUB2' type="text">
+            <button id="subButton">=</button>
+            <p id="answerSub">Answer</p>
+        </div>
+        <div class="multiply-section">
+            <h2>Multiply</h2>
+            <input id='inputMULTI1' type="text">
+            <p>x</p>
+            <input id='inputMULTI2' type="text">
+            <button id="multiButton">=</button>
+            <p id="answerMulti">Answer</p>
+        </div>
+        <div class="division-section">
+            <h2>Division</h2>
+            <input id='inputDIV1' type="text">
+            <p>/</p>
+            <input id='inputDIV2' type="text">
+            <button id="divButton">=</button>
+            <p id="answerDiv">Answer</p>
+        </div>
 
         </section>
     </main>
