--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
         <div class="gutter-right logo">
             <img src="assets/big-logo.png" />
         </div>
+        
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="./assets/alchemy-logo.png" />
+            <iframe src="https://giphy.com/embed/TN0irsCox4F2nifYXC" width="480" height="343" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/fallontonight-jimmy-fallon-tonight-show-TN0irsCox4F2nifYXC"></a></p>
             <h2>
-                Calculator!
+                Do Math!
             </h2>
             <section id="counterSection">
                 <h3 class="first">You have used addition <span id="addMany">0</span></h3>
